--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,11 +1,7 @@
 <%-include('./includes/head.ejs');-%>
-<title><%=pageTitle%></title>
-<link rel="stylesheet" href="/css/homepage.css"/>
-<%-include('./includes/head2.ejs');-%>
 <body>
     <div class="homeContainer">
-        <nav class="">
-
-        </nav>
+        <%- include('./includes/navigation.ejs');-%>
     </div>
 </body>
+<%-include('./includes/end.ejs');-%>
