--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -12,6 +12,7 @@
                 <label>Description</label>
                 <textarea rows="5" cols="50" name="description"></textarea>
             </div>
+            <button type="submit">Add</button>
        </form>
     </div>
 </body>
