--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -3,17 +3,17 @@
     
     <div class="homeContainer">
         <%- include('./includes/navigation.ejs');-%>
-       <form method="post" action="/add-blog">
-            <div>
-                <label>Title</label>
-                <input type="text" name="title"/>
+       <form method="post" action="/add-blog" class="w-[100%] min-h-[90vh]  flex flex-col items-center">
+            <div class="h-[20vh] w-[100%] flex justify-center items-center">
+                <input class="h-[80%] w-[90%] text-3xl font-semibold border-none outline-none placeholder:text-black" type="text" name="title" placeholder="Title" required/>
             </div>
-            <div>
-                <label>Description</label>
-                <textarea rows="5" cols="50" name="description"></textarea>
+            <div class="h-[60vh] w-[100%]  flex justify-center items-center">
+                <textarea class="h-[100%] w-[90%] border-none outline-none"  name="description" placeholder="Description" required></textarea>
             </div>
-            <button type="submit">Add</button>
+                <button class="bg-green-500 h-[6vh] w-[60%] text-white font-semibold hover:bg-slate-800" type="submit">Add</button>
+            
        </form>
     </div>
+    <script></script>
 </body>
 <%-include('./includes/end.ejs');-%>
