--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -5,9 +5,17 @@
         <% if(blogs.length==0){%>
             <h1>Nothing to Show</h1>
         <%}else{%>
-            <% blogs.map((blog)=>{%>
-                <h1><%=blog.title%></h1>
-            <%})%>
+            <div class="min-h-[90vh] w-[100%] flex pt-5 box-border flex-wrap">
+                <% blogs.map((blog)=>{%>
+                    <div class="h-[40vh] w-[30%] bg-[#E1E5FE] ml-5" style="width:18rem">
+                            <h6 class="h-[20%] w-[100%] pl-4 font-bold text-xl"><%=blog.title%></h6>
+                            <p class="h-[60%] w-[100%] pl-4"><%=blog.description%></p>
+                            <div class="h-[20%] w-[100%] flex flex-row items-center justify-around">
+                                <a href="www.youtube.com" class="h-[80%] w-[80%] flex justify-center items-center bg-yellow-500 text-white font-bold cursor-pointer hover:bg-green-800">Read More</a>
+                            </div>
+                    </div>
+                <%})%>
+            </div>
         <%}%>
     </div>
 </body>
