--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -8,7 +8,7 @@
                 <input class="h-[80%] w-[90%] text-3xl font-semibold border-none outline-none placeholder:text-black" type="text" name="title" placeholder="Title" required/>
             </div>
             <div class="h-[60vh] w-[100%]  flex justify-center items-center">
-                <textarea class="h-[100%] w-[90%] border-none outline-none"  name="description" placeholder="Description" required></textarea>
+                <textarea style="resize: none;" class="h-[100%] w-[90%] border-none outline-none"  name="description" placeholder="Description" required></textarea>
             </div>
                 <button class="bg-green-500 h-[6vh] w-[60%] text-white font-semibold hover:bg-slate-800" type="submit">Add</button>
             
