delete method added

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -11,7 +11,7 @@
                             <h6 class="h-[20%] w-[100%] pl-4 font-bold text-xl"><%=blog.title%></h6>
                             <p class="h-[60%] w-[100%] pl-4"><%=blog.description%></p>
                             <div class="h-[20%] w-[100%] flex flex-row items-center justify-around">
-                                <a href="" class="h-[80%] w-[80%] flex justify-center items-center bg-yellow-500 text-white font-bold cursor-pointer hover:bg-green-800">Read More</a>
+                                <a href="/blogs/<%=blog.id%>" class="h-[80%] w-[80%] flex justify-center items-center bg-yellow-500 text-white font-bold cursor-pointer hover:bg-green-800">Read More</a>
                             </div>
                     </div>
                 <%})%>
