worked on preline

--- a/views/blog-detail.ejs
+++ b/views/blog-detail.ejs
@@ -6,7 +6,7 @@
             <div class="h-[10vh] w-[100%] pl-5 box-border text-2xl font-sans font-semibold">
                 <%=blog.title%>
             </div>
-            <div class="w-[100%] pl-5 box-border text-xl font-sans">
+            <div class="w-[100%] pl-5 box-border text-xl font-sans whitespace-pre-line">
                 <%=blog.description%>
             </div>
             <div class="h-[10vh] w-[100%] flex flex-row box-border mt-10">
