--- a/views/blog-detail.ejs
+++ b/views/blog-detail.ejs
@@ -13,7 +13,7 @@
                 <form action="/delete/<%=blog.id%>" class="h-[80%] w-[20%] ml-5" method="post">
                     <button class="h-[100%] w-[100%] bg--500 flex justify-center items-center bg-red-500 text-white text-xl font-medium cursor-pointer hover:bg-red-900" type="submit">Delete</button>
                 </form>
-                <a href="" class="h-[80%] w-[20%] bg-yellow-500 flex justify-center items-center text-white text-xl font-medium ml-5 cursor-pointer hover:bg-gray-900">Update</a>
+                <a href="/blogs/<%=blog.id%>?edit=true" class="h-[80%] w-[20%] bg-yellow-500 flex justify-center items-center text-white text-xl font-medium ml-5 cursor-pointer hover:bg-gray-900">Update</a>
             </div>
         </div>
     </div>
