--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,11 +2,11 @@
 <body>
     
     <div class="homeContainer">
-       <form method="post" action="/signup" class="w-[100%] min-h-[90vh]  flex flex-col items-center bg-red">
-            <input type="text" placeholder="First Name" required/>
-            <input type="text" placeholder="Last Name" required/>
-            <input type="email" placeholder="Email" required/>
-            <input type="password" placeholder="Password" required/>
+       <form method="post" action="/authentication/signup" class="w-[100%] min-h-[90vh]  flex flex-col items-center bg-red">
+            <input type="text" name="firstName" placeholder="First Name" required/>
+            <input type="text" name="lastName" placeholder="Last Name" required/>
+            <input type="email" name="email" placeholder="Email" required/>
+            <input type="password" name="password" placeholder="Password" required/>
             <button>Sign Up</button>       
        </form>
     </div>
