--- a/public/css/style.css
+++ b/public/css/style.css
@@ -525,6 +525,12 @@ video {
 .w-\[80\%\] {
   width: 80%;
 }
+.w-\[70\%\] {
+  width: 70%;
+}
+.w-\[15\%\] {
+  width: 15%;
+}
 .cursor-pointer {
   cursor: pointer;
 }
@@ -573,6 +579,10 @@ video {
 .bg-\[\#E1E5FE\] {
   --tw-bg-opacity: 1;
   background-color: rgb(225 229 254 / var(--tw-bg-opacity));
+}
+.bg-purple-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 .pl-5 {
   padding-left: 1.25rem;
@@ -635,4 +645,12 @@ video {
 .hover\:bg-green-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
+.hover\:bg-gray-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.hover\:text-gray-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
