--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,18 @@
 <%-include('./includes/head.ejs');-%>
 <body>
-    <div class="homeContainer">
-       <form method="post" action="/authentication/login" class="w-[100%] min-h-[90vh]  flex flex-col items-center bg-red">
-            <input type="email" name="email" placeholder="Email" required/>
-            <input type="password" name="password" placeholder="Password" required/>
-            <button>Login</button>       
+    <div class="h-[100vh] w-[100%] flex items-center justify-center">
+       <form method="post" action="/authentication/login" class=" box-border shadow-xl h-[60%] w-[60%] rounded-lg bg-purple-700 flex flex-col justify-center items-center bg-red">
+            <p class="text-3xl mb-5 font-semibold text-white font-mono">Login</p>
+            <input class="h-[15%] w-[80%] font-sans rounded-full pl-5 box-border outline-none  focus:border-rose-500 focus:border-2" type="email" name="email" placeholder="Email" required/>
+            <input class="h-[15%] w-[80%] font-sans rounded-full pl-5 box-border outline-none  focus:border-rose-500 focus:border-2 mt-5" type="password" id="password" name="password" placeholder="Password" required/>
+            <div class="h-[10%] w-[80%] flex flex-row items-center pl-2 mt-5">
+                <input type="checkbox" onclick="showPassword()"/>
+                <p class="ml-2 text-white font-semibold">Show Password</p>
+            </div>
+            <button class="h-[15%] w-[50%] bg-green-500 text-white text-xl font-bold mt-5 rounded-lg hover:bg-gray-900">Login</button>  
+            <p class="mt-2 text-white">Don't have an account?<a class="text-blue-400 font-bold hover:text-red-300" href="/authentication/signup"> SignUp</a></p>     
        </form>
     </div>
-    <script></script>
+    <script src="/javascript/showPassword.js"></script>
 </body>
 <%-include('./includes/end.ejs');-%>
