--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,13 +10,13 @@
             </div>
             <input class="h-[10%] w-[70%] font-sans rounded-full pl-5 box-border outline-none mt-5  focus:border-rose-500 focus:border-2" type="email" name="email" placeholder="Email" required/>
             <input class="h-[10%] w-[70%] font-sans rounded-full pl-5 box-border outline-none mt-5  focus:border-rose-500 focus:border-2" type="password" id="password" name="password" placeholder="Password" required/>
-            <!-- <div class="h-[10%] w-[70%] flex flex-row items-center pl-2 mt-5">
+            <div class="h-[10%] w-[70%] flex flex-row items-center pl-2 mt-5">
                 <input type="checkbox" onclick="showPassword()"/>
                 <p class="ml-2 text-white font-semibold">Show Password</p>
-            </div> -->
+            </div>
             <button class="h-[10%] w-[50%] bg-green-500 text-white text-xl font-bold mt-5 rounded-lg hover:bg-gray-900">Sign Up</button>       
        </form>
     </div>
-    <!-- <script src="/javascript/showPassword.js"></script> -->
+    <script src="/javascript/showPassword.js"></script>
 </body>
 <%-include('./includes/end.ejs');-%>
