--- a/views/blog-detail.ejs
+++ b/views/blog-detail.ejs
@@ -6,7 +6,7 @@
             <div class="h-[10vh] w-[100%] pl-5 box-border text-2xl font-sans font-semibold">
                 <%=blog.title%>
             </div>
-            <div class="w-[100%] pl-5 box-border text-xl font-sans whitespace-pre-line">
+            <div class="w-[100%] pl-5 pr-5 box-border text-xl font-sans whitespace-pre-line">
                 <%=blog.description%>
             </div>
            <% if(blog.userId==userId){%>
