--- a/public/css/style.css
+++ b/public/css/style.css
@@ -474,6 +474,21 @@ video {
 .ml-5 {
   margin-left: 1.25rem;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.ml-\[10\%\] {
+  margin-left: 10%;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -507,6 +522,18 @@ video {
 .h-\[100vh\] {
   height: 100vh;
 }
+.h-\[60\%\] {
+  height: 60%;
+}
+.h-\[15\%\] {
+  height: 15%;
+}
+.h-\[10\%\] {
+  height: 10%;
+}
+.h-\[90\%\] {
+  height: 90%;
+}
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
@@ -528,8 +555,14 @@ video {
 .w-\[80\%\] {
   width: 80%;
 }
+.w-\[50\%\] {
+  width: 50%;
+}
 .w-\[70\%\] {
   width: 70%;
+}
+.w-\[45\%\] {
+  width: 45%;
 }
 .w-\[15\%\] {
   width: 15%;
@@ -558,11 +591,22 @@ video {
 .justify-around {
   justify-content: space-around;
 }
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .text-ellipsis {
   text-overflow: ellipsis;
 }
 .whitespace-pre-line {
   white-space: pre-line;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .border-none {
   border-style: none;
@@ -583,22 +627,34 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(225 229 254 / var(--tw-bg-opacity));
 }
-.bg-red-600 {
+.bg-purple-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
 }
 .bg-purple-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
+.p-5 {
+  padding: 1.25rem;
+}
 .pl-5 {
   padding-left: 1.25rem;
+}
+.pr-5 {
+  padding-right: 1.25rem;
 }
 .pt-5 {
   padding-top: 1.25rem;
 }
+.pl-2 {
+  padding-left: 0.5rem;
+}
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 .text-3xl {
   font-size: 1.875rem;
@@ -624,6 +680,15 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
   outline: 2px solid transparent;
@@ -657,7 +722,18 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
+.hover\:text-red-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
+}
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.focus\:border-2:focus {
+  border-width: 2px;
+}
+.focus\:border-rose-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 63 94 / var(--tw-border-opacity));
 }
